--- a/benchmarks/jmh/build.gradle
+++ b/benchmarks/jmh/build.gradle
@@ -11,6 +11,8 @@ dependencies {
 }
 
 jmh {
+    excludes = ["RxJava", "Flow"]
+    includes = ["Scrabble"]
     benchmarkMode = ['avgt']
     timeUnit = 'ms'
     fork = 1
