--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,5 @@ android.enableJetifier=true
 kotlin.js.compiler=both
 
 kotlin.mpp.enableCompatibilityMetadataVariant=true
+kotlinx.atomicfu.enableJvmIrTransformation=true
+kotlinx.atomicfu.enableJsIrTransformation=true
